# rust_neural_network

./: .gitignore  Cargo.toml
libs-n-stuff/: SDL2_gfx.lib
src/: lib.rs  main.rs
src/nn/: layer.rs  link.rs  mod.rs  network.rs  neural_network.rs  node.rs  simulation.rs
tests/: src.rs
